# adventure-works-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
adventure_works/1 - bronze/: extracao.py
adventure_works/1 - bronze/sql/: address.sql  customer.sql  person.sql  product.sql  sales_offer_product.sql  sales_order_detail.sql  sales_order_header.sql  sales_person.sql
adventure_works/2 - silver/: data_types.json  main.py
adventure_works/2 - silver/schema/: address.json  customer.json  person.json  product.json  sales_offer_product.json  sales_order_detail.json  sales_order_header.json  sales_person.json
terraform/: main-old.tf  main.tf
terraform/cloudwatch/: logs.tf
terraform/iam/: iam.tf
terraform/lambda/: lambda.tf
terraform/s3/: s3_trigger.tf
terraform/sns/: sns.tf  sns_sub.tf
terraform/sqs/: sqs.tf
terraform/subscriptions/: sns_sqs.tf
terraform/triggers/: lambda.tf  s3.tf
