[tool.poetry]
name = "adventure-works"
version = "0.1.0"
description = ""
authors = ["Daniele B. <danicbeltrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymssql = "^2.2.11"
duckdb = "^0.9.2"
loguru = "^0.7.2"
awswrangler = "^3.4.2"
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
